--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -37,4 +37,5 @@
     <string name="notification_detail_message">Vous avez notifié un état de %1$s ( %2$s ) aux groupes  %3$s .</string>
     <string name="hello_blank_fragment">Bonjour fragment blanc</string>
     <string name="permission_rationale">Permission d\'accès aux contacts nécesssaire pour l\'email</string>
+    <string name="deconnexion">Deconnexion</string>
 </resources>
