--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -86,4 +86,5 @@
     <string name="title_activity_gestion_group">GestionGroupActivity</string>
     <string name="title_group_list">Groups</string>
     <string name="title_group_detail">Group Detail</string>
+    <string name="deconnexion">Deconnexion</string>
 </resources>
