--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -87,8 +87,8 @@
     <string name="action_sign_in_short">Sign in</string>
     <string name="error_invalid_email">This email address is invalid</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="title_activity_gestion_group">GestionGroupActivity</string>
-    <string name="title_group_list">Groups</string>
-    <string name="title_group_detail">Group Detail</string>
+    <string name="title_activity_gestion_group" translatable="false">GestionGroupActivity</string>
+    <string name="title_group_list" translatable="false">Groups</string>
+    <string name="title_group_detail" translatable="false">Group Detail</string>
     <string name="deconnexion">Deconnexion</string>
 </resources>
