--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,7 +49,7 @@
     <string name="group_confirmer">Send</string>
     <string name="notification_message">Notification send !</string>
     <string name="notification_detail_message">You just notified : %1$s ( %2$s ) to groups " %3$s ".</string>
-    <string name="description_member"> %1$s ( %2$s ) notified the %3$s by %4$s.</string>
+    <string name="description_member"> %1$s notified the %2$s by %3$s .\n%4$s last update was %5$s at %6$s</string>
     <string name="self_description_member"> %1$s ( %2$s ) notified the %3$s</string>
 
     <array name="state">
