--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,6 +23,7 @@
     <string name="safe">Safe</string>
     <string name="title_activity_three_button" translatable="false">ThreeButton</string>
     <string name="unknown">Unknown</string>
+    <string name="nearHome">Near a safe-zone</string>
 
     <string name="hurt">Hurt</string>
     <string name="freeze">Frozen</string>
@@ -44,18 +45,24 @@
     <string name="party">Party</string>
     <string name="selectPrecisely">Select others</string>
 
+
+    <string name="askState">Ask state</string>
+    <string name="changeState">Change state</string>
+
     <string name="selection_messages">Precise your state</string>
     <string name="group_messages">Select groups to notify</string>
     <string name="group_confirmer">Send</string>
     <string name="notification_message">Notification send !</string>
     <string name="notification_detail_message">You just notified : %1$s ( %2$s ) to groups " %3$s ".</string>
-    <string name="description_member"> %1$s ( %2$s ) notified the %3$s by %4$s.</string>
-    <string name="self_description_member"> %1$s ( %2$s ) notified the %3$s</string>
+    <string name="description_member">" %1$s notified the %2$s by %3$s."</string>
+    <string name="self_description_member">" %1$s ( %2$s ) notified the %3$s./n"</string>
+
 
     <array name="state">
         <item>@string/danger</item>
         <item>@string/problem</item>
         <item>@string/safe</item>
+        <item>@string/nearHome</item>
         <item>@string/unknown</item>
     </array>
 
@@ -72,6 +79,7 @@
         <item>@string/aggressed</item>
         <item>@string/freeze</item>
         <item>@string/lost</item>
+
         <item>@string/sad</item>
         <item>@string/needLove</item>
         <item>@string/angry</item>
@@ -83,7 +91,6 @@
         <item>@string/ready</item>
     </array>
 
-    <!-- TODO: Remove or change this placeholder text -->
     <string name="action_sign_in_short">Sign in</string>
     <string name="error_invalid_email">This email address is invalid</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
@@ -92,4 +99,8 @@
     <string name="title_group_detail" translatable="false">Group Detail</string>
     <string name="deconnexion">Deconnexion</string>
     <string name="title_activity_maps">Map</string>
+    <string name="confirm">Confirm</string>
+    <string name="cancel">Cancel</string>
+    <string name="tileSetState">Select the state to notify</string>
+    <string name="no_description">No recent state available</string>
 </resources>
