Favorite, Party and all Sending
But the favorite and party definition is not working yet

--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -51,4 +51,5 @@
     <string name="changeState">Changer l\'état</string>
     <string name="no_description">Pas d\'état récent disponible</string>
     <string name="tileSetState">Selectionner l\'état correspondant</string>
+    <string name="notification_detail_error">Oups! La connexion à la base de donnée a échouée./n Vérifié votre connexion internet et réessayé !</string>
 </resources>
