--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -103,4 +103,5 @@
     <string name="cancel">Cancel</string>
     <string name="tileSetState">Select the state to notify</string>
     <string name="no_description">No recent state available</string>
+    <string name="notification_detail_error">Oups! An error happen during the connexion to the database. \\nCheck your internet connexion and try again !</string>
 </resources>
