--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -112,4 +112,5 @@
     <string name="no_description">No recent state available</string>
     <string name="notification_detail_error">Oups! An error happen during the connexion to the database. \\nCheck your internet connexion and try again !</string>
     <string name="already_asked">Asked</string>
+    <string name="set_wifi">Set up your home wifi</string>
 </resources>
