--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -70,6 +70,10 @@
     <string name="confirm_add_wifi">Voulez-vous ajouter le réseau \'%1$s\' comme wifi de référence ? \nAttention, lorsque vous serez à proximité, vous serez identifié comme étant \"proche d\'un lieu de sureté.\"</string>
     <string name="delete_wifi">Supprimer le réseau wifi domicile</string>
     <string name="confirm_delete_wifi">Vouslez-vous supprimer le wifi de référence ?</string>
+    <string name="notificationDangerState">%1$s est en danger</string>
+    <string name="notificationAskedState">Un membre de %1$s à demandé quel était votre état</string>
+    <string name="notificationUnresolvedState">Votre état a était mis a jour à inconnu</string>
+    <string name="titlenotificationState">Notification de %1$s</string>
     <string name="localisation_description">De %1$s le %2$s</string>
     <string name="localisation_distance">A %1$s de vous</string>
     <string name="localise_user">Localiser</string>
